--- a/css/dom-practice.css
+++ b/css/dom-practice.css
@@ -137,3 +137,28 @@ img {
     height: 4rem;
     border-radius: 50%;background-color: var(--main-color);
 }
+
+/* ********** Scroll Top Button ********** */
+
+.scroll-top-btn {
+    position: fixed;
+    z-index: 999;
+    bottom: 1vh;
+    right: calc(4.25rem + 1vw);
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    font-size: 2rem;
+    font-weight: bold;
+    background-color: var(--main-color);
+    color: var(--second-color);
+    cursor: pointer;
+    outline: 0;
+    border: 0;
+};
+
+
+.scroll-top-btn:hover {
+    background-color: var(--second-color);
+    color: var(--main-color);
+}
